--- a/src/css/common/basic.less
+++ b/src/css/common/basic.less
@@ -111,20 +111,20 @@
     }
 }
 //底部公用样式
-.footer{
+.footer{    
     width: 100%;
     height: 77px;
-
-    border: 1px solid blue;
+    background: #fff;
+    
     .nav{
         width: 50px;
         height: 40px;
-}
+    }
     i{
         font-size: 30px;
 
     }
-    .active{
-    color: blue;
+    .active{ 
+        color: blue;
     }
 }
