--- a/src/css/common/basic.less
+++ b/src/css/common/basic.less
@@ -77,54 +77,57 @@
         color: #aaa;
     }
 }
-
-
-/*toast 样式*/
+/* 提示框 */
 .toast{
     position: absolute;
-    top: calc(50% - 75px);
-    left: calc(50% - 75px);
-    padding: 15px;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+        line-height: 20px;
+        text-align: center;
+         /*这里文本可支持换行数*/
+    left: 0;
+    right: 0;
     width: 150px;
     height: 150px;
-    background: rgba(0,0,0,.7);
-    border-radius: 5px;
+    background: rgba(0,0,0,0.7);
+    padding: 15px;
     color: #fff;
     .icon{
         width: 100%;
         height: 80px;
-        text-align: center;
-        line-height:100px;
         font-size: 40px;
+        text-align: center;
+        
     }
-    .toast-text{
+    .to-text{
         width: 100%;
-       height: 40px; 
-       line-height: 20px;
-       text-align: center;
-       /*文本可支持换行数*/
-       overflow:hidden;
-        text-overflow:ellipsis;
-        display:-webkit-box;
-        -webkit-box-orient:vertical;
-        -webkit-line-clamp:2;
-    }
-}
-//底部公用样式
-.footer{    
-    width: 100%;
-    height: 77px;
-    background: #fff;
-    
-    .nav{
-        width: 50px;
         height: 40px;
-    }
-    i{
-        font-size: 30px;
-
-    }
-    .active{ 
-        color: blue;
+       overflow:hidden;
+       text-overflow:ellipsis;
+       display:-webkit-box;
+       -webkit-box-orient:vertical;
+       -webkit-line-clamp:2;
     }
 }
+/* 公共底部 */
+
+    .footers{
+        width: 100%;
+        height: 77px;
+        background: #fff;
+        .item{
+           
+            i{
+                font-size: 30px!important;
+              }
+        }
+       
+           
+         
+        
+        
+    }
+    .active{
+        color: #5AA1FF;
+    }
