--- a/src/css/sports.less
+++ b/src/css/sports.less
@@ -1,8 +1,9 @@
-
+/* 运动页 css样式*/
 header{
     width: 100%;
-    height: 60px;
-    padding: 15px;
+    height: 80px;
+   padding: 20px;
+   background: #fff;
     .head-box{
         justify-content: space-around;
         align-items: center;
@@ -11,14 +12,11 @@ header{
         border-bottom: 1px solid  #A2A2A2;
         color:#A2A2A2;
         font-size: 16px;
-        .active{
-            color: blue;
-        }
     }
     
 }
 main{
-    padding: 15px;
+    padding: 25px;
     
   
     overflow: scroll;
@@ -43,20 +41,34 @@ main{
          width: 100%;
          height: 150px;
          background: #E8E8E8;
-       
+       img{
+           width: 100%;
+           height: 100%;
+       }
      }
      .video-text{
         padding-left: 10px;
         line-height: 25px;
+        white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            padding: 0px 10px;
         .text{
             font-size: 12px;
             color: #B7B7B7;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            
+            
+            
         }
      }
     }
    .video-menu{
        width: 100%;
        padding-top:15px ;
+       
       
        .video-menu1{
            width: 100%;
@@ -64,17 +76,26 @@ main{
            border-radius: 20px;
             overflow: hidden;
              box-shadow:0 0 7px 0px #8b8b8b;
-            background: #E8E8E8;
+            /* background: #E8E8E8; */
              margin:20px 0px;
+             img{
+                 height: 90px;
+                 width: 100%;
+             }
            .p1{
-            font-size: 18px;
+            font-size: 16px;
             font-family: normal;
-            margin: 56px 0px 10px 20px;
+           /*  margin: 56px 0px 10px 20px; */
            
            }
         .p2{
-            font-size: 12px;
-            margin-left: 20px;
+            font-size: 10px;
+            color: #B7B7B7;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            padding: 0px 10px;
+            /* margin-left: 20px; */
         }
        }
    }
